--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -1,21 +1,10 @@
-.services_container{
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    max-width: 1120px;
-    width: 90%;
-    margin: 0 auto;    
-}
-.Card:hover{
-    animation: mymove 5s infinite;
-}
-
-@keyframes mymove {
-    50% {transform: rotate(180deg);}
-  }
-  .head > h1{
+.ser{
+  display: flex;
+    flex-direction: row;
     text-align: center;
-    color: gray;
-    margin-bottom: 20px;
-    margin-top: 20px;
-  }
+}
+.ser img{
+  padding: 5vw;
+ height: 30vh;
+ 
+}
